# destatis-gehaltsrechner-python

./: .gitignore  README.md  README_TC.md  coefficients.json  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
examples/: salary_comparison.ipynb  salary_comparison_TC.ipynb
salary_calculator/: __init__.py
tests/: test_calculator.py
