[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "destatis-gehaltsrechner"
version = "0.1.0"
description = "A Python tool to estimate gross salaries in Germany based on Destatis models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name="Author" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["salary_calculator"]

[tool.setuptools.package-data]
"*" = ["coefficients.json"]
